# ephemeral-proxy-package

./: .gitignore  Makefile  check.txt.pub  docker-compose.dev.yml  docker-compose.yml
cli/: pyproject.toml  requirements.txt
cli/localdrop/: api_client.py  auth.py  cli.py  config.py  display.py  ssh.py  websocket.py
client/: index.html  nginx.conf  package.json  vite.config.ts
client/src/: App.tsx  main.tsx  vite-env.d.ts
client/src/hooks/: useTunnelWebSocket.ts
client/src/lib/: api.ts  utils.ts
client/src/pages/: Home.tsx  Login.tsx  MyTunnels.tsx  Tunnel.tsx
client/src/types/: index.ts
infra/: Caddyfile  Caddyfile.dev  setup-vps.sh  sshd_config.snippet  tunnel-ssh-handler
server/: Dockerfile  alembic.ini  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py
server/app/: config.py  database.py  dependencies.py  main.py  redis_client.py
server/app/api/: admin.py  auth.py  proxy.py  tunnels.py  users.py  websocket.py
server/app/middleware/: fault_injection.py  rate_limit.py  tunnel_proxy.py
server/app/models/: tunnel.py
server/app/schemas/: request_log.py  tunnel.py
server/app/scripts/: download_geoip.py  download_geoip.sh  init_db.py  init_port_pool.py
server/app/services/: auth_service.py  geo_ip.py  port_pool.py  tunnel_cleanup.py  tunnel_proxy.py  websocket_manager.py
