[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-cli"
version = "1.0.0"
description = "Instant localhost sharing for developers"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Nawaz Sheriff"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: Proxy",
]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.1",
    "cryptography>=42.0.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.1",
]

[project.scripts]
tunnel = "localdrop.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["localdrop*"]
